--- a/src/Codex.Views/TableOfContents.xaml
+++ b/src/Codex.Views/TableOfContents.xaml
@@ -46,8 +46,22 @@
         </ResourceDictionary>
     </Window.Resources>
     <Grid>
+
         <ScrollViewer HorizontalScrollBarVisibility="Auto">
             <StackPanel>
+                <!-- Top Nav -->
+                <Button
+                Style="{DynamicResource TextOnlyButton}" 
+                Command="{Binding CloseWindow}"
+                Width="30" Height="30" 
+                HorizontalAlignment="Right" 
+                VerticalAlignment="Top"                 
+                Margin="0,0,0,0">
+                    <StackPanel VerticalAlignment="Center">
+                        <TextBlock Text="X" TextAlignment="Center" FontSize="16" FontWeight="Bold" />
+                    </StackPanel>
+                </Button>
+                
                 <TextBlock HorizontalAlignment="Center" Text="{Binding Title}" FontSize="30" />
                 <ItemsControl 
                     ItemsSource="{Binding Parts}" 
